<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Employee Example</string>

    <string name="save_employee">Save</string>
    <string name="delete_employee">Delete</string>
    <string name="enter_employee_name">Enter employee name</string>
    <string name="employee_photo">Employee Photo</string>
    <string name="gender">Gender</string>
    <string name="role">Role</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>

    <string name="export_data">Export employee data</string>
    <string name="import_data">Import employee data</string>

    <string name="years">%1$d years</string>
    <string name="no_app_csv">No app to read CSV file</string>
    <string name="latest_employee_name">Latest employee name</string>
    <string name="latest_employee">The name of latest employee is: %1$s</string>
    <string name="no_employee_added">No employee added yet</string>
    <string name="share_employee_data">Share Employee data</string>
    <string name="share_text">Employee Data\nName: %1$s\nRole: %2$s\nAge: %3$d\nGender: %4$s</string>

    <string name="camera_permission">"We need your permission to take a photo.
        When asked please give the permission"</string>
    <string name="camera_permission_denied">Permission denied to use camera</string>
    <string name="image_file_Error">Error occurred while creating camera file: %1$s</string>
    <string name="file_export_success">File exported successfully</string>

</resources>
