<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EmployeeDetailFragment">

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toStartOf="@+id/gender_group"
        app:layout_constraintTop_toTopOf="@+id/gender_group" />

    <TextView
        android:id="@+id/employee_role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/role"
        app:layout_constraintStart_toEndOf="@+id/employee_photo"
        app:layout_constraintTop_toBottomOf="@+id/employee_name" />

    <Button
        android:id="@+id/delete_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_employee"
        app:layout_constraintTop_toBottomOf="@+id/gender_group" />

    <ImageView
        android:id="@+id/employee_photo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/employee_photo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blank_photo"
        tools:srcCompat="@drawable/blank_photo" />

    <EditText
        android:id="@+id/employee_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_employee_name"
        android:inputType="text"
        android:maxLength="50"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/employee_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_employee"
        app:layout_constraintEnd_toStartOf="@+id/delete_employee"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_group" />

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/employee_age"
        app:layout_constraintTop_toBottomOf="@+id/employee_age">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/gender_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/other" />
    </RadioGroup>

    <Spinner
        android:id="@+id/employee_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/employee_role_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_name" />

    <TextView
        android:id="@+id/employee_age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/employee_role_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_role" />

    <Spinner
        android:id="@+id/employee_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/employee_age_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_role" />

</androidx.constraintlayout.widget.ConstraintLayout>